# mesas

./: .gitignore  Mac_M1_how_to.md  README.md  environment.yml  meson.build  pyproject.toml  pytest.ini  recompile.ps1  recompile.sh  requirements.txt  setup.py  todo.md
.github/workflows/: python-test.yml
code_MATLAB/: LOG_FL.txt
code_MATLAB/paraEst_SSM/: addpaths.m  runme_paraEST_SSM.m  theta_alpha.m
code_MATLAB/paraEst_SSM/MLE_trueState/: MLE_truestate.m
code_MATLAB/paraEst_SSM/plots_Fn/: Plots_marginal.m  coverageFrequency.m  lowerTplotmatrix.m  plotTrajpf.m  plot_g.m  plotdensity.m
code_MATLAB/paraEst_SSM/sampler/: BnGn.m  SAEM.m  cpf_as.m  fnObs_ensemble.m  forward_ensemble.m  pgas_SAEM.m  pgas_state.m  pgas_statePar.m  resampling.m  sample2thetaU.m  sampleTheta_Bayes.m  sampleTheta_Bayes0.m
code_MATLAB/paraEst_SSM/state_space_model/: fnObs.m  forward_solver.m  generateData.m  nl_fn.m
doc/: blender.rst  conf.py  config.rst  functions.rst  index.rst  inputs.rst  installation.rst  model.rst  options.rst  questions.html  quickstart.rst  readthedocs.yml  results.rst  sasspec.rst  solspec.rst  specs.rst  visualization.rst  whatismesas.rst  whatissas.rst
examples/benchmark/: animate_benchmark.py
examples/lower_hafren/: config.json
mesas/: __init__.py
mesas/data/: lower_hafren.csv
mesas/dev/: batchscript.sh  lowerhafren.py  plots.py  recursive_split.py  synthetic_steady.py  synthetic_test.py  troubleshoot.py
mesas/examples/data/: minileo.xlsx  ~$minileo.xlsx
mesas/examples/hyporheic/: config.json  data.csv
mesas/examples/miniLEO/: config.json  data.csv  miniLEO.csv
mesas/junk/: lowerhafren.py  piecewise_example.py  steady.py
mesas/me/: recursive_split.py
mesas/sas/: __init__.py  _rsas.py  _rsas_functions.py  _sas.py  _sas_functions.py  blender.py  functions.py  model.py  solve.f90  solver.f90  specs.py
mesas/sas/cdflib90/: #cdf_binomial_mod.f90#  CMakeLists.txt  DOC.TEX  INSTALL  LEGALITIES  Makefile  biomath_mathlib_mod.f90  cdf_beta_mod.f90  cdf_gamma_mod.f90  compile.cdflib90  readme
mesas/sas/cdflib90/doc/: cdflib90_doc.ps  cdflib90_doc.tex  cdflib90_doc.txt
mesas/test/: dev_test_recursive_split.py  test_benchmark.py  test_sas.py  testtest.py
mesas/tests/: _esther_utils.py  _piecewise.py  dev_test_benchmark.py  dev_test_recursive_split.py  dev_test_vis.py  lowerhafren.py  piecewise.py  piecewise_example.py  sas_blender.py  sas_functions.py  sas_model.py  steady.py  test_benchmark.py  test_piecewise.py  test_sas.py  test_vis.py
mesas/tests/data/: lower_hafren.csv
mesas/utils/: vis.py
test/: test_benchmark.py  test_examples.py  test_time.py  unsteady_data.csv
